# asset_to_yaml

./: .gitignore  .gitmodules  AT_Animation.h  AT_Binary.h  AT_DemoButton.h  AT_Dialogue.h  AT_GruntyQuestion.h  AT_LevelSetup.h  AT_MidiSeq.h  AT_Model.h  AT_QuizQuestion.h  AT_Sprite.h  AT_Texture.h  AnimationAsset.h  Asset.h  AssetEntry.h  AssetFactory.h  AssetFolder.h  AssetMeta.h  AssetType.h  BKString.h  Banjo-Kazooie ROM Map.md  BinaryAsset.h  CMakeLists.txt  ContInput.h  DecompressionUtils.h  DemoButton.h  DialogueAsset.h  GlobalInfo.h  GruntyQuestion.h  ImgFmt.h  LevelSetup.h  Makefile  MidiSeq.h  ModelAsset.h  QuizQuestion.h  README.md  Sprite.h  SpriteChunk.h  SpriteFrame.h  (+7 more)
